--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
-  <header>
+  <header role="banner">
     <nav>
       <h1>
         <a href="/">Restaurant Reviews</a>
@@ -22,8 +21,8 @@
     </nav>
   </header>
 
-  <main id="maincontent">
-    <section id="map-container">
+  <main id="maincontent" role="main">
+    <section id="map-container" role="application" aria-label="Mapbox Map">
       <div id="map"></div>
     </section>
     <section>
@@ -36,13 +35,14 @@
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul id="restaurants-list" role="region" aria-label="restaurant list"></ul>
     </section>
   </main>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2018
     <a href="/">
       <strong>Restaurant Reviews</strong>
