--- a/restaurant.html
+++ b/restaurant.html
@@ -10,40 +10,43 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <title>Restaurant Reviews</title>
 </head>
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="banner">
     <!-- Beginning nav -->
     <nav>
       <h1>
         <a href="/">Restaurant Reviews</a>
       </h1>
     </nav>
+
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" role="navigation" aria-label="breadcrumb">
       <li>
         <a href="/">Home</a>
       </li>
     </ul>
     <!-- End breadcrumb -->
+
     <!-- End nav -->
+
   </header>
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <!-- Beginning map -->
-    <section id="map-container">
+    <section id="map-container" role="application" aria-label="Mapbox Map">
       <div id="map"></div>
     </section>
     <!-- End map -->
+
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <section id="restaurant-container" aria-labelledby="restaurant-name">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
@@ -51,29 +54,34 @@
       <table id="restaurant-hours"></table>
     </section>
     <!-- end restaurant -->
+
     <!-- Beginning reviews -->
-    <section id="reviews-container">
+    <section id="reviews-container" aria-label="reviews">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
+
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2018
     <a href="/">
       <strong>Restaurant Reviews</strong>
     </a> All Rights Reserved.
   </footer>
   <!-- End footer -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
-  <!-- Beginning scripts -->
+
+<!-- Beginning scripts -->
+  <script async defer src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
+
   <!-- End scripts -->
 
 </body>
