--- a/restaurant.html
+++ b/restaurant.html
@@ -74,7 +74,7 @@
   <!-- End footer -->
 
 <!-- Beginning scripts -->
-  <script async defer src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
   
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
