Fine tuning of responsive display

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section id="map-container" role="application" aria-label="Mapbox Map">
       <div id="map"></div>
     </section>
-    <section>
+    <section id="filter-list" aria-labelledby="filter-label" role="region">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
