--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <section id="map-container" role="application" aria-label="Mapbox Map">
       <div id="map"></div>
     </section>
-    <section id="filter-list" aria-labelledby="filter-label" role="region">
+    <section id="filter-list" aria-label="filter-label" role="region">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods"  role="form" aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" role="form" aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
