--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
   <header role="banner">
     <nav>
-      <h1>
-        <a href="/">Restaurant Reviews</a>
-      </h1>
+      <h1>Restaurant Reviews</h1>
     </nav>
   </header>
 
   <main id="maincontent" role="main">
     <section id="map-container" role="application" aria-label="Mapbox Map">
-      <div id="map"></div>
+      <div id="map" tabindex="-1"></div>
     </section>
     <section id="filter-list" aria-label="filter-label" role="region">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods"  role="form" aria-label="form-label" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" role="form" tabindex="1" aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" role="form" aria-label="form-label" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" role="form" tabindex="2"aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
