--- a/restaurant.html
+++ b/restaurant.html
@@ -19,9 +19,7 @@
   <header role="banner">
     <!-- Beginning nav -->
     <nav>
-      <h1>
-        <a href="/">Restaurant Reviews</a>
-      </h1>
+      <h1>Restaurant Reviews</h1>
     </nav>
 
     <!-- Beginning breadcrumb -->
@@ -47,7 +45,7 @@
 
     <!-- Beginning restaurant -->
     <section id="restaurant-container" aria-labelledby="restaurant-name">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
