--- a/index.html
+++ b/index.html
@@ -13,32 +13,35 @@
 </head>
 
 <body>
-  <header role="banner">
+  <header id="title" role="banner" tabindex="-1">
     <nav>
       <h1>Restaurant Reviews</h1>
     </nav>
   </header>
 
   <main id="maincontent" role="main">
-    <section id="map-container" role="application" aria-label="Mapbox Map">
+    <a href="#neighborhoods-select" class="skip-link" tabindex="1">Skip to main content</a>
+    <section id="map-container" role="application" tabindex="-1" aria-label="Mapbox Map">
       <div id="map" tabindex="-1"></div>
     </section>
     <section id="filter-list" aria-label="filter-label" role="region">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" role="form" tabindex="1" aria-label="form-label" onchange="updateRestaurants()">
+        <select id="neighborhoods-select" name="neighborhoods" role="form" tabindex="2" aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" role="form" tabindex="2"aria-label="form-label" onchange="updateRestaurants()">
+        <select id="cuisines-select" name="cuisines" role="form" tabindex="3" aria-label="form-label" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list" role="region" aria-label="restaurant list"></ul>
     </section>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+
 
   <footer id="footer" role="contentinfo">
     Copyright (c) 2018
